--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Crud Application</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="p-5">
+      <h2>List of Clients</h2>
+      <a href="/myshop/create.php" role="button">New Client</a>
+
+      <table>
+        <thead>
+          <tr class="flex gap-20">
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Address</th>
+            <th>Create At</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody class="flex gap-20">
+          <td>10</td>
+          <td>Bill Gates</td>
+          <td>bill.gates@microsoft.com</td>
+          <td>+987654321</td>
+          <td>New York, USA</td>
+          <td>18/05/2022</td>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
