--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title>Crud Application</title>
   </head>
   <body>
-    <div class="p-5">
+    <div class="container my-5">
       <h2>List of Clients</h2>
       <a href="/myshop/create.php" role="button">New Client</a>
 
-      <table>
+      <table class="table">
         <thead>
-          <tr class="flex gap-20">
+          <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
@@ -23,13 +28,17 @@
             <th>Action</th>
           </tr>
         </thead>
-        <tbody class="flex gap-20">
+        <tbody>
           <td>10</td>
           <td>Bill Gates</td>
           <td>bill.gates@microsoft.com</td>
           <td>+987654321</td>
           <td>New York, USA</td>
           <td>18/05/2022</td>
+          <td>
+            <a href="/" class="btn btn-primary btn-sm">Edit</a>
+            <a href="/" class="btn btn-danger btn-sm">Delete</a>
+          </td>
         </tbody>
       </table>
     </div>
