--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
       <table class="table">
         <thead>
+          <?php
+            $servername = "localhost";
+
+          ?>
           <tr>
             <th>ID</th>
             <th>Name</th>
